# rinha-de-compiler

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
src/grammar/: CMakeLists.txt  Rinha.g4
src/interpreter/: CMakeLists.txt  Context.h  CoroutineExecutionStrategy.cpp  CoroutineExecutionStrategy.h  Diagnostic.h  EnvVarExecutionStrategy.cpp  EnvVarExecutionStrategy.h  Environment.cpp  Environment.h  Environment.test.h  Exceptions.h  ExecutionStrategy.h  Nodes.h  ParsedSource.h  Parser.cpp  Parser.h  Runtime.h  Task.h  TermNodeVisitor.h  TestUtil.test.h  TreeWalkerExecutionStrategy.cpp  TreeWalkerExecutionStrategy.h  Values.h  main.cpp  main.test.cpp
src/interpreter/tests/: arithmetic.test.cpp  bool.test.cpp  factor.test.cpp  if.test.cpp  int.test.cpp  logical.test.cpp  precedence.test.cpp  print.test.cpp  str.test.cpp  tuple.test.cpp  variable.test.cpp
